fix(broken layout): fix broken layout on large screen
fix #110

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,17 @@
 body {
 	background-color: #0D0D0D;
+	width: 100vw;
+	height: 100vh;
 	text-align: center;
 	color: aliceblue;
 	font-family: "Montserrat", sans-serif;
 	font-size: 1rem;
-	padding-bottom: 3rem;
+}
+
+.container {
+	width: 100%;
+	height: 100%;
+	position: relative;
 }
 
 .logo {
@@ -26,15 +33,15 @@ body {
 
 h1 {
 	font-weight: bold;
-	font-size: 2rem;
-	letter-spacing: 0.3rem;
+	font-size: 1.8rem;
+	letter-spacing: 0.1rem;
 	margin: 1rem;
 }
 
 h2 {
-	font-weight: bold;
-	font-size: 3rem;
-	letter-spacing: 0.3rem;
+	font-weight: 500;
+	font-size: 1.5rem;
+	letter-spacing: 0.1rem;
 	margin: 40px 0px 20px;
 }
 
@@ -186,8 +193,8 @@ input[type=range]:focus::-ms-fill-upper {
 .control-button-group {
 	position: fixed;
 	left: 50%;
+	bottom: 0;
 	transform: translate(-50%);
-	bottom: 2rem;
 }
 
 #unpublish {
@@ -216,6 +223,10 @@ input[type=range]:focus::-ms-fill-upper {
 input {
 	width: 100%;
 	margin-bottom: 2px;
+}
+
+.video-group {
+	margin-bottom: 3rem;
 }
 
 .video-wrapper {
@@ -297,8 +308,16 @@ input {
 	transform: translate(-50%);
 }
 
-.meeting-area > hr {
-	margin: 3rem 10rem 1rem 10rem;
+.meeting-area {
+	width: 80vw;
+	height: 80vh;
+	max-width: 1200px;
+	max-height: 1000px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateY(-50%) translateX(-50%);
+	-webkit-transform: translateY(-50%) translateX(-50%);
 }
 
 /* Agenda */
